reference to about page added

--- a/homepage1.html
+++ b/homepage1.html
@@ -11,15 +11,15 @@
     <header>
         <nav class="nav-container">
             <div class="logo-heading">
-                <a href="#"><img src="Images/Homepage/Margadarshan_logo.jpg" id="logo-image"></a>
-                <a href="#">
+                <a href="homepage1.html"><img src="Images/Homepage/Margadarshan_logo.jpg" id="logo-image"></a>
+                <a href="homepage1.html">
                     <h1 class="heading-logo">
                         MARGADARSHAN
                     </h1>
                 </a>
             </div>
             <ul class="nav-items">
-                <a href="#" class="items item-1">About</a>
+                <a href="about.html" class="items item-1">About</a>
                 <a href="#" class="items item-2">Universities</a>
                 <a href="#" class="items item-3">Portfolio</a>
                 <a href="#" class="items item-4">Roadmap</a>
