AboutPage button functionality

--- a/about.html
+++ b/about.html
@@ -23,16 +23,16 @@
             <div class="website-title">
                 <button class="logo-button" id="logo-button">
                     <div class="logo-container">
-                        <img class="logo" src="Images\AboutPage\Margadarshan logo.png">
+                        <a href="homepage1.html"><img class="logo" src="Images\AboutPage\Margadarshan logo.png"></a>
                     </div>
                 </button>
-                <button class="website-title-button" id="website-title-button" onclick="navigateToHome()">
+                <a href="homepage1.html"><button class="website-title-button" id="website-title-button" onclick="navigateToHome()">
                     MARGADARSHAN
-                </button>
+                </button></a>
             </div>
 
             <div class="header-button-container">
-                <button class="header-button">About</button>
+                <a href = "about.html"><button class="header-button">About</button></a>
 
                 <div class="header-button-uni">
                     <button class="header-button">Universities</button>
