--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <button class="header-button">Universities</button>
 
                     <div class="drop-down-uni">
-                        <button class="drop-down-button">Universities</button>
+                        <a href = "university.html"><button class="drop-down-button">Universities</button></a>
                         <button class="drop-down-button">Scholarship</button>
                         <button class="drop-down-button">Exams</button>
                     </div>
