modified login and registration

--- a/register-page.html
+++ b/register-page.html
@@ -18,9 +18,7 @@
 
             </div>
             <div class="img">
-                <!-- <img src="https://www.w3schools.com/html/pic_trulli.jpg" alt="Trulli" width="500" height="333"> -->
-                <!-- <img src="https://www.w3schools.com/html/pic_trulli.jpg" alt="Trulli"> -->
-                <img src="https://media.discordapp.net/attachments/1158351778836905988/1184120108373786624/Screenshot_2023-10-09_145642.png?ex=658ad0c9&is=65785bc9&hm=cf804ee5a0ecb74f68bb390c6b9a1e3d1dc397c38a11c2661c2d48c6744b899c&=&format=webp&quality=lossless&width=508&height=423" alt="Trulli">
+                       <img src="https://media.discordapp.net/attachments/1158351778836905988/1184120108373786624/Screenshot_2023-10-09_145642.png?ex=658ad0c9&is=65785bc9&hm=cf804ee5a0ecb74f68bb390c6b9a1e3d1dc397c38a11c2661c2d48c6744b899c&=&format=webp&quality=lossless&width=508&height=423" alt="Trulli">
 
 
             </div>
@@ -55,7 +53,7 @@
                 <button>Create Account</button>
             </div>
             <br>
-            <div id="qst">Already have an account? <a href="login">login</a></div>
+            <div id="qst">Already have an account? <a href="login-page.html">login</a></div>
             
             </form>
             </div>
