--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
                     <div class="drop-down-uni">
                         <a href = "university.html"><button class="drop-down-button">Universities</button></a>
-                        <button class="drop-down-button">Scholarship</button>
+                        <a href="scholarship.html"><button class="drop-down-button">Scholarship</button></a>
                         <button class="drop-down-button">Exams</button>
                     </div>
                 </div>
