--- a/scholarship.html
+++ b/scholarship.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universities</title>
+    <title>Scholarship</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Nunito:wght@300;400;500;600;700&family=Paytone+One&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css-files\universityHeader.css">
-    <link rel="stylesheet" href="css-files\universityCentre.css">
+    <link rel="stylesheet" href="css-files\scholarshipHeader.css">
+    <link rel="stylesheet" href="css-files\scholarshipCentre.css">
 </head>
 
 <body>
@@ -68,14 +68,14 @@
 
     <div class="centre">
         <div class="page-heading">
-            <div class="university-title">
-                <p class="title-main-text">Universities</p>
+            <div class="scholarship-title">
+                <p class="title-main-text">Scholarship</p>
                 <p class="title-subtext">
-                    Effortlessly find the perfect university using personalized filters
+                    Discover tailored scholarships that match your criteria
                 </p>
             </div>
             <div class="title-image">
-                <img class="university-image" src="Images\University\university.png">
+                <img class="scholarship-image" src="Images\Scholarship\scholarship.png">
             </div>
         </div>
 
@@ -83,59 +83,52 @@
             <div class="text-field-container">
                 <div class="major-choice">
                     <p class="question">What do you want to study?</p>
-                    <input class="text-field1" type="text">
+                    <input class="text-field" type="text">
                 </div>
                 <div class="location-choice">
                     <p class="question">Which state do you want to study in?</p>
-                    <input class="text-field1" type="text">
+                    <input class="text-field" type="text">
                 </div>
             </div>
-
-            <div class="fee-button-container">
-                <div class="fees">
-                    <p class="question">Tuition fees (USD)</p>
-                    <input class="text-field2" type="text" placeholder="Minimum"> 
-                    <p class="arrow">&#8596</p>
-                    <input class="text-field2" type="text" placeholder="Maximum">
-                </div>
-                <div class="search-button-container">
-                    <button class="search">Search</button>
-                </div>
+            <div class="search-button-container">
+                <button class="search">Search</button>
             </div>
         </div>
 
-        <div class="university-list">
-            <div class="uni-container">
-                <div class="uni-description-container">
-                    <div class="uni-image-container">
-                        <img class="uni-image" src="Images\University\Michigan_Technological_University_seal.svg.png">
+        <div class="scholarship-list">
+            <div class="sch-container">
+                <div class="sch-description">
+                    <div class="sch-image-container">
+                        <img class="sch-image" src="Images\Scholarship\peo.png">
                     </div>
-                    <div class="uni-desc">
-                        <p class="uni-name">Michigan Technological University</p>
-                        <p class="uni-location">Houghton, Michigan</p>
-                        <p class="major">BS in Biochemistry and Molecular Biology</p>
+                    <div class="sch-desc-container">
+                        <p class="sch-name">P.E.O. International Peace Scholarship (IPS)</p>
+                        <p class="sch-institute">The International Peace Scholarship Fund</p>
+                        <p class="sch-type">Women's scholarship</p>
+                        <p class="grant">Grant: $12,500</p>
                     </div>
                 </div>
-                <div class="uni-costs">
-                    <p class="annual-fee">$41,022/year</p>
-                    <p class="years">4 years</p>
+                <div class="sch-deadline">
+                    <p class="deadline">Deadline:</p>
+                    <p class="date">15 Dec 2023</p>
                 </div>
             </div>
 
-            <div class="uni-container">
-                <div class="uni-description-container">
-                    <div class="uni-image-container">
-                        <img class="uni-image" src="Images\University\U-M_Logo-Hex.png">
+            <div class="sch-container">
+                <div class="sch-description">
+                    <div class="sch-image-container">
+                        <img class="sch-image" src="Images\Scholarship\uni of memphis.png">
                     </div>
-                    <div class="uni-desc">
-                        <p class="uni-name">University of Michigan</p>
-                        <p class="uni-location">Ann Arbor, Michigan</p>
-                        <p class="major">BS in Biochemistry</p>
+                    <div class="sch-desc-container">
+                        <p class="sch-name">International Merit Scholarship</p>
+                        <p class="sch-institute">University of Memphis</p>
+                        <p class="sch-type">Merit-based scholarship</p>
+                        <p class="grant">Grant: Various benefits</p>
                     </div>
                 </div>
-                <div class="uni-costs">
-                    <p class="annual-fee">$49,530/year</p>
-                    <p class="years">4 years</p>
+                <div class="sch-deadline">
+                    <p class="deadline">Deadline:</p>
+                    <p class="date">31 July 2024</p>
                 </div>
             </div>
         </div>
