react frontend refactor

--- a/register-page.html
+++ b/register-page.html
@@ -59,7 +59,7 @@
             
             <br><br><br><br>
             <div class="input-box">
-                <button id="submit-button" disabled onclick="submitForm()">Create Account</button>
+                <button id="submit-button" onclick="submitForm()">Create Account</button>
             </div>
             <br>
             <div id="qst">Already have an account? <a href="login-page.html">login</a></div>
