--- a/Margadarshan_frontend/index.html
+++ b/Margadarshan_frontend/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Nunito:wght@300;400;500;600;700&family=Paytone+One&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   </head>
   <body style="place-items: unset; background-color: white; width: 100%; height: auto">
     <div id="root" style="margin: unset; padding: unset; max-width: unset; width: 100%; height: 100%"></div>
